--- a/letters.html
+++ b/letters.html
@@ -43,25 +43,21 @@ function redraw(data) {
                     .attr("dy", ".35em")
                     .attr("y", -60)
                     .attr("x", (d,i) => i * 32 )
-                    .style("fill-opacity", 0)
+                    //.style("fill-opacity", 0)
                     .text(d => d),
-      update => update.attr("class", "update")
-                  .call(sel => sel
-                    .transition(t)
-                      .attr("x", (d,i) => i * 32 )
-                  ),
+      update => update,
       exit => exit.attr("class", "exit")
                   .call(sel => sel
                     .transition(t)
                       .attr("y", 60)
-                      .style("fill-opacity", 0)
+                      //.style("fill-opacity", 0)
                       .remove()
                   )
     )
       .call(sel => sel
         .transition(t)
           .attr("y", 0)
-          .style("fill-opacity", 1)
+          //.style("fill-opacity", 1)
       )
 }
 
